# rasposd

./: .gitignore  README  demo.sh
QtOSD/: QtOSD.pro  fileio.cpp  fileio.h  main.cpp
QtOSD/qml/QtOSD/: Ruler.qml  main.qml
camera/: preview.py
demo/: calibrate.sh  demo.sh  gps_full_speed.py  raspivid
demo/QtOSD/qml/QtOSD/: Ruler.qml  main.qml
libosd/: CMakeLists.txt  flightdata.csv  osd.py  osd_demo.py  osd_demo_solo.py
libosd/osd/: Drawable.cpp  Drawable.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  osd  osd.cpp  osd.h  osd_paint.cpp  simplefragshader.glsl
libosd/python/: osd.py  osd_demo.py
libosd/python/profiling/: profil_all.txt  profil_no-ruler.txt  profil_no-ruler_no-text.txt
recorder/: calibrate.py  recorder.py  recorder_demo.py  recorder_fusion.py
recorder/camera/: VideoRecorder.py
recorder/config/: camera.cfg  position.cfg
recorder/position/: GPSReader.py  GPSRecord.py  GPSRecorder.py  IMUReader.py  IMURecord.py  IMURecorder.py  PositionRecorder.py
recorder/position/bitify/python/graphics/: 3d-display.py
recorder/position/bitify/python/sensors/: bmp085.py  gy88.py  hmc5883l.py  imu.py  mpu6050.py
recorder/position/bitify/python/utils/: calibrate-hmc5883l.py  i2cutils.py
recorder/position/bitify/python/web/: server.py
